# mobile-events-sdk

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  DESIGN.md  README.md  build.gradle  settings.gradle
.github/workflows/: ci.yml
benchmarks/: bench_main.cpp
demo/android-app/: build.gradle
demo/android-app/src/androidTest/java/com/eventsdk/demo/: SdkIntegrationTest.java
demo/android-app/src/main/: AndroidManifest.xml
demo/android-app/src/main/java/com/eventsdk/demo/: MainActivity.java
demo/android-app/src/main/res/layout/: activity_main.xml
demo/ios-app/: EventSDKDemoApp.swift  project.yml
demo/ios-app/EventSDKDemo/: ContentView.swift  EventSDKDemo-Bridging-Header.h  Info.plist
demo/ios-app/EventSDKDemo.xcodeproj/: project.pbxproj
platform/android/: CMakeLists.txt  build.gradle
platform/android/src/main/cpp/: EventSDK_JNI.cpp
platform/android/src/main/java/com/eventsdk/: EventSDK.java  EventSDKConfig.java
platform/ios/: EventSDK.h  EventSDK.mm
sdk-core/src/: Config.h  EventQueue.cpp  EventQueue.h  EventStore.cpp  EventStore.h  FlushManager.cpp  FlushManager.h  HealthMetrics.h
tests/: test_main.cpp
